--- a/pom.xml
+++ b/pom.xml
@@ -37,18 +37,21 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!-- Opcional: mejor soporte para constructores, records, etc. -->
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-parameter-names</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!-- Opcional: tipos de fecha/hora de Java 8+ -->
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!-- Tests con JUnit 5 -->
