--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.stxt</groupId>
-    <artifactId>dev.stxt</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <artifactId>stxt-parser</artifactId>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
 
     <name>dev.stxt.lang</name>
